# MR-ROBOT-2.0-HARDWARE

./: README.md
2MotorData/: 2MotorData.ino
EncoderData/: EncoderData.ino
controller/encoder/: encoder.ino
mr_robot_2.0_firmware/launch/: launch_pi_nodes.py
mr_robot_2.0_firmware/scripts/: twist_to_pwm.py
mr_robot_2_firmware/: CMakeLists.txt  package.xml
mr_robot_2_firmware/config/: ekf.yaml
mr_robot_2_firmware/launch/: display.launch.py  pi_nodes_launch.py  robot.launch.py
mr_robot_2_firmware/scripts/: diff_tf.py  twist_to_pwm.py
mr_robot_nav/: CMakeLists.txt  package.xml
mr_robot_nav/launch/: display.launch.py
